@@ -17,6 +17,10 @@
 	* fvwm.gif:
 	removed old unused files
 
+	* web-theme/*/blue*:
+	* css/blue.css:
+	cleaned up color settings - more is needed
+	
 2004-03-04  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>
 
 	* screenshots/menus/Scott_Smedley/*:
